@@ -9,16 +9,16 @@ wholewords=Whole words
 regexp=Regular expression
 noSubstitutionsTitle=No substitutions
 noSubstitutionsDescription=You must define at least one substitution.
-xmlErrorTitle=Error in XML
-xmlErrorText=Error while processing XML:
 xmlGroupErrorText=One or more errors have ocurred while processing a substitution group from XML. Below there is the error list:
 importFromUrlTitle=Enter URL
 importFromUrlText=Enter the URL from which you want to import the substitutions list
 nonSupportedProtocol=Non-supported protocol
-invalidSubscriptionUrl=The subscription URL isn't valid
-httpError=HTTP error
-cantConnectToServerTitle=Can't connect to server
-cantConnectToServerText=Can't connect to the server specified in the URL %S
-fileNotFoundTitle=File not found
-fileNotFoundText=File %S not found
-unexpectedError=Unexpected error
+subscriptionStatusDisabled=Disabled
+subscriptionStatusUpdating=Updating
+subscriptionStatusLastUpdated=Last update at %S
+xmlError=Error while processing XML: %S
+cantConnectToServer=Can't connect to the server specified in the URL %S
+httpError=HTTP error: %S
+fileNotFound=File %S not found
+unexpectedError=Unexpected error: %S
+onlyHttp=Only HTTP is supported.
